--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,10 @@ dependencies = [
     "mkdocs>=1.5.0",
     "docker>=6.1.0",
     "kubernetes>=27.2.0",
+    "llama-index>=0.12.38",
+    "llama-index-core>=0.12.41",
+    "llama-index-embeddings-openai>=0.3.1",
+    "llama-index-vector-stores-chroma>=0.4.2",
 ]
 
 [project.optional-dependencies]
