--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,7 @@ dependencies = [
     "llama-index-core>=0.12.41",
     "llama-index-embeddings-openai>=0.3.1",
     "llama-index-vector-stores-chroma>=0.4.2",
+    "pillow>=10.0.0",
 ]
 
 [project.optional-dependencies]
